Add screenshot to public folder

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta property="og:title" content="Example Title" />
+    <meta name="image" property="og:image" content="%PUBLIC_URL%/foody-screenshot.PNG" />
+    <meta name="author" content="Paolo Tormon" />
+    <meta property="og:description" content="Food Ordering Site made with React by Paolo Tormon" />
+    <meta property="og:url" content="https://paolotormon.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
