--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta property="og:title" content="Example Title" />
+    <meta property="og:title" content="Foody Food Ordering React App" />
     <meta name="image" property="og:image" content="%PUBLIC_URL%/foody-screenshot.PNG" />
     <meta name="author" content="Paolo Tormon" />
     <meta property="og:description" content="Food Ordering Site made with React by Paolo Tormon" />
